--- a/lib/totp.js/package.json
+++ b/lib/totp.js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "totp.js",
-  "version": "0.0.1",
+  "version": "1.0.1-zepp",
   "description": "Two-factor authentication implementation in pure javascript. One-time password generator (HOTP/TOTP) with support for Google Authenticator. ",
   "main": "index.js",
   "scripts": {
@@ -24,8 +24,7 @@
   },
   "homepage": "https://github.com/wuyanxin/totp.js#readme",
   "dependencies": {
-    "jssha": "^2.3.1",
-    "thirty-two": "^1.0.2"
+    "jssha": "^2.3.1"
   },
   "devDependencies": {
     "mocha": "^5.0.4"
