--- a/app.json
+++ b/app.json
@@ -6,11 +6,11 @@
     "appType": "app",
     "version": {
       "code": 1,
-      "name": "1.0.1"
+      "name": "1.1.0"
     },
     "icon": "icon.png",
     "vender": "zepp",
-    "description": "TOTP Authenticator for Amazfit devices"
+    "description": "Another 2FAuthenticator based on TOTP for Zepp Amazfit GTS 4"
   },
   "permissions": [
     "data:os.device.info",
