--- a/app.json
+++ b/app.json
@@ -1,56 +1,50 @@
 {
-  "configVersion": "v3",
-  "app": {
-    "appId": 25087,
-    "appName": "totpfit",
-    "appType": "app",
-    "version": {
-      "code": 1,
-      "name": "1.3.0"
+    "configVersion": "v3",
+    "app": {
+        "appId": 25087,
+        "appName": "totpfit",
+        "appType": "app",
+        "version": {
+            "code": 1,
+            "name": "1.3.0"
+        },
+        "icon": "icon.png",
+        "vender": "zepp",
+        "description": "Another 2FAuthenticator based on TOTP for Zepp Amazfit GTS 4"
     },
-    "icon": "icon.png",
-    "vender": "zepp",
-    "description": "Another 2FAuthenticator based on TOTP for Zepp Amazfit GTS 4"
-  },
-  "permissions": [
-    "data:os.device.info",
-    "device:os.local_storage"
-  ],
-  "runtime": {
-    "apiVersion": {
-      "compatible": "3.0.0",
-      "target": "3.0.0",
-      "minVersion": "3.0"
-    }
-  },
-  "targets": {
-    "default": {
-      "module": {
-        "page": {
-          "pages": [
-            "page/index",
-            "page/tip"
-          ]
-        },
-        "app-side": {
-          "path": "app-side/index"
-        },
-        "setting": {
-          "path": "setting/index"
+    "permissions": ["data:os.device.info", "device:os.local_storage"],
+    "runtime": {
+        "apiVersion": {
+            "compatible": "3.0.0",
+            "target": "3.0.0",
+            "minVersion": "3.0"
         }
-      },
-      "platforms": [
-        {
-          "st": "s",
-          "dw": 390
+    },
+    "targets": {
+        "default": {
+            "module": {
+                "page": {
+                    "pages": ["page/index", "page/tip"]
+                },
+                "app-side": {
+                    "path": "app-side/index"
+                },
+                "setting": {
+                    "path": "setting/index"
+                }
+            },
+            "platforms": [
+                {
+                    "st": "s",
+                    "dw": 390
+                }
+            ]
         }
-      ]
-    }
-  },
-  "i18n": {
-    "en-US": {
-      "appName": "TOTPFit"
-    }
-  },
-  "defaultLanguage": "en-US"
+    },
+    "i18n": {
+        "en-US": {
+            "appName": "TOTPFit"
+        }
+    },
+    "defaultLanguage": "en-US"
 }
