--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "totpfit",
-  "version": "1.3.1",
-  "description": "Another 2FAuthenticator based on TOTP for Zepp Amazfit GTS 4",
-  "main": "app.js",
-  "author": "Lisoveliy",
-  "license": "MIT",
-  "devDependencies": {
-    "@zeppos/device-types": "^3.0.0"
-  },
-  "dependencies": {
-    "@zeppos/zml": "^0.0.27",
-    "jssha": "^3.3.1"
-  }
+    "name": "totpfit",
+    "version": "1.3.1",
+    "description": "Another 2FAuthenticator based on TOTP for Zepp Amazfit GTS 4",
+    "main": "app.js",
+    "author": "Lisoveliy",
+    "license": "MIT",
+    "devDependencies": {
+        "@zeppos/device-types": "^3.0.0",
+        "prettier": "3.6.2"
+    },
+    "dependencies": {
+        "@zeppos/zml": "^0.0.27",
+        "jssha": "^3.3.1"
+    }
 }
