--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "totpfit",
-    "version": "1.3.1",
-    "description": "Another 2FAuthenticator based on TOTP for Zepp Amazfit GTS 4",
+    "version": "1.4.0",
+    "description": "Another 2FAuthenticator based on TOTP for Zepp OS with Google Authenticator and Proton Authenticator support",
     "main": "app.js",
     "author": "Lisoveliy",
     "license": "MIT",
